--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name": "Animal Bucket Game",
     "short_name": "BucketGame",
     "description": "A fun educational game where kids throw animals into a bucket",
-    "start_url": "/index.html",
-    "scope": "/",
+    "start_url": "./index.html",
+    "scope": "./",
     "display": "fullscreen",
     "orientation": "landscape",
     "background_color": "#87CEEB",
